sumo/tests/traci/Scenario/DomRoadMap/InvalidObjectID/net_state.traci
<?xml version="1.0"?>

<!-- generated on 05/19/08 21:50:16 by SUMO sumo Version dev-SVN-r5539
<configuration>

   <input>
      <net-file>net.net.xml</net-file>
      <route-files>routes.rou.xml</route-files>
   </input>

   <output>
      <netstate-dump>netstate_dump.xml</netstate-dump>
   </output>

   <traffic_control_interface_(traci)_server>
      <remote-port>8845</remote-port>
      <penetration>1</penetration>
   </traffic_control_interface_(traci)_server>

</configuration>
-->

<sumo-netstate>
   <timestep time="1">
   </timestep>
</sumo-netstate>
